Margin on mobile and fix label for attr

--- a/form.css
+++ b/form.css
@@ -386,6 +386,7 @@ footer>div {
 
     form {
         padding: 3rem 2.5rem;
+        margin: 40px 0;
     }
 
     ul {
